--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
     <script src="app.js"></script>
 </head>
 <body>
-    <select id="dropdown" class="custom-select"></select>
+    <nav class="navbar navbar-light bg-primary text-white">
+        <span class="m-auto">
+            Select <select id="dropdown"></select> or Search by Badge Number <input id="search" type="text">
+        </span>
+    </nav>
 
-    <div class="alert alert-primary">
-        Right now use of force data is only available up to 2016
+    <div class="alert alert-secondary">
+        Right now use of force data is only available up to 2017
     </div>
 
     <div id="content">
