--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </nav>
 
     <div class="alert alert-secondary">
-        Right now use of force data is only available up to 2017
+        Right now OPA data is only available up to 2017
     </div>
 
     <div id="content">
